[package]
name = "bq24195"
version = "0.1.0"
authors = ["Sameer Puri <sameer@users.noreply.github.com>"]
edition = "2018"
keywords = ["no-std", "power", "i2c", "bq24195", "charger"]
categories = ["embedded", "hardware-support", "no-std"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/sameer/bq24195"
documentation = "https://docs.rs/bq24195"
description = "I2C driver for Texas Instruments BQ24195 Single Cell Charger"
readme = "README.md"

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/sameer/bq24195" }
is-it-maintained-open-issues = { repository = "https://github.com/sameer/bq24195" }
maintenance = { status = "passively-maintained" }

[dependencies]
embedded-hal = "0.2"
bitflags = "1"

[dependencies.paste]
git = "https://github.com/sameer/paste"
version = "0.1"

[dev-dependencies]
cortex-m-rt = "*"
arduino_mkrvidor4000 = "0.1"
